update CorsConfiguration